--- a/home.css
+++ b/home.css
@@ -1,5 +1,8 @@
-h1 {
-  color: #00ff00;
+div.title{
+  background-color: 333;
+}
+h1.title {
+  color: #ffffff;
 }
 body {
   background-color: black;
