--- a/home.css
+++ b/home.css
@@ -1,9 +1,9 @@
 div.title{
-  color: 333;
+  color: #333;
 }
 h1.title {
   text-color: #ffffff;
 }
 body {
-  background-color: 000;
+  background-color: #000;
 }
