--- a/home.css
+++ b/home.css
@@ -1,9 +1,9 @@
 div.title{
-  color: #333;
+  color: #030303;
 }
 h1.title {
-  text-color: #255255255;
+  text-color: #ffffff;
 }
 body {
-  background-color: #000;
+  background-color: #000000;
 }
